Fix wrapping on pre tags

--- a/css/main.css
+++ b/css/main.css
@@ -62,6 +62,16 @@ blockquote small:before {
   content: '\2014 \00A0'
 }
 
+pre {
+  overflow: auto;
+  padding: 0.8rem;
+  border-radius: 0.2rem;
+  border: solid 1px rgba(0, 0, 0, 0.1);
+  background-color: rgba(0, 0, 0, 0.05);
+  white-space: pre-wrap;
+  font-size: 0.9rem;
+}
+
 
 /*
  * Content container
@@ -286,7 +296,6 @@ blockquote small:before {
  * Callout-style box
  */
 .sponsors-main {
-  /* background-color: #f5f5f5; */
   padding: 5px 20px;
   border-radius: 4px;
   margin-top: 10px;
@@ -296,11 +305,7 @@ blockquote small:before {
   width: 400px;
 }
 
-#slug-instructions {
-  width: 450px;
-}
-
-#sponsors {
+.sponsors-table {
   margin-top: 20px;
 }
 
